<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TesteCamera</string>
    <string name="app_name2">SegundaActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginGet">Login - Get</string>
    <string name="LoginPost">Login - Post</string>
    <string name="App">Login Application</string>
    <string name="LoginStatus">Login Status</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="method">Login Method</string>
    <string name="Choose">Choose Method</string>
    <string name="action_swap_camera">Swap</string>
    <string name="title">Libras +</string>
    <string name="choice">O que deseja fazer?</string>
    <string name="phrase">Clique em uma letra ou número</string>


</resources>
